--- a/unitTests_revised.ipynb
+++ b/unitTests_revised.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -282,30 +282,12 @@
     "        d=15\n",
     "        l=10\n",
     "        initial=kmeansparallel(data,k,l,d)\n",
-    "        assert kmeans(data,initial,k,d).shape[0]==k\n"
+    "        assert len(np.unique(kmeans(data,initial,k,d)[1]))==k\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from kmeans_combined_revised import kmeans, kmeansparallel\n",
-    "data = np.random.normal(size=(1000,15))\n",
-    "print(data)\n",
-    "k=5\n",
-    "d=15\n",
-    "l=10\n",
-    "i=kmeansparallel(data,k,l,d)\n",
-    "kmeans(data,i,k,d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -322,7 +304,7 @@
       "test_dist_prob_plus.py .\n",
       "test_dist_prob_plus_parallel.py ..\n",
       "test_distance_sq.py .......\n",
-      "test_kmeans.py F\n",
+      "test_kmeans.py .\n",
       "test_kmeansplusplus.py .\n",
       "test_kmeansplusplus_parallel.py .\n",
       "test_log_cost.py .\n",
@@ -330,39 +312,7 @@
       "test_reassign_centroids.py .\n",
       "test_weights.py .\n",
       "\n",
-      "=================================== FAILURES ===================================\n",
-      "______________________________ test_kmeans_shape _______________________________\n",
-      "\n",
-      "\u001b[1m    def test_kmeans_shape():\u001b[0m\n",
-      "\u001b[1m        for i in range(10):\u001b[0m\n",
-      "\u001b[1m            data = np.random.normal(size=(1000,15))\u001b[0m\n",
-      "\u001b[1m            k=5\u001b[0m\n",
-      "\u001b[1m            d=15\u001b[0m\n",
-      "\u001b[1m            l=10\u001b[0m\n",
-      "\u001b[1m            initial=kmeansparallel(data,k,l,d)\u001b[0m\n",
-      "\u001b[1m>           assert kmeans(data,initial,k,d).shape[0]==k\u001b[0m\n",
-      "\n",
-      "test_kmeans.py:11: \n",
-      "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ \n",
-      "kmeans_combined_revised.py:137: in kmeans\n",
-      "\u001b[1m    l= getLabels(dataSet, centroids)\u001b[0m\n",
-      "kmeans_combined_revised.py:161: in getLabels\n",
-      "\u001b[1m    l.append(np.argmin(list(dist_sq(dataSet[i],c) for c in centroids)))\u001b[0m\n",
-      "kmeans_combined_revised.py:161: in <genexpr>\n",
-      "\u001b[1m    l.append(np.argmin(list(dist_sq(dataSet[i],c) for c in centroids)))\u001b[0m\n",
-      "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ \n",
-      "\n",
-      "a = array([-1.22338437,  0.52258434, -2.49295657,  0.12647868, -0.81774145,\n",
-      "        1.27814801,  0.54512947, -0.50867663, -0.23309849, -0.17775193,\n",
-      "       -0.10416284,  0.41900527,  1.27803868, -0.14239928,  1.74140157])\n",
-      "b = array([ 0.1480975 , -0.24398276])\n",
-      "\n",
-      "\u001b[1m    def dist_sq(a, b):\u001b[0m\n",
-      "\u001b[1m>       return np.sum((a-b)**2)\u001b[0m\n",
-      "\u001b[31m\u001b[1mE       ValueError: operands could not be broadcast together with shapes (15,) (2,)\u001b[0m\n",
-      "\n",
-      "kmeans_combined_revised.py:8: ValueError\n",
-      "\u001b[31m\u001b[1m===================== 1 failed, 18 passed in 4.84 seconds ======================\u001b[0m\n"
+      "\u001b[32m\u001b[1m========================== 19 passed in 45.68 seconds ==========================\u001b[0m\n"
      ]
     }
    ],
