--- a/unitTests_revised.ipynb
+++ b/unitTests_revised.ipynb
@@ -190,7 +190,7 @@
     "\n",
     "def test_samplesize_is_k():\n",
     "    for i in range(10):\n",
-    "        data = np.random.normal(size=(1000,15))\n",
+    "        data = np.random.normal(size=(10000,15))\n",
     "        k=5\n",
     "        d=15\n",
     "        l=10\n",
@@ -287,7 +287,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting test_shouldStop.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file test_shouldStop.py\n",
+    "import numpy as np\n",
+    "from kmeans_combined_revised import shouldStop\n",
+    "\n",
+    "def test_shouldStop_iteration_greater_than_50():\n",
+    "    for i in range(10):\n",
+    "        old = np.random.normal(size=(10,15))\n",
+    "        new = np.random.normal(size=(10,15))\n",
+    "        iteration=60\n",
+    "        assert shouldStop(old, new, iteration)==True\n",
+    "\n",
+    "def test_shouldStop_old_new_not_equal():\n",
+    "    for i in range(10):\n",
+    "        old = np.random.normal(size=(10,15))\n",
+    "        new = np.random.normal(size=(10,15))\n",
+    "        iteration=30\n",
+    "        assert shouldStop(old, new, iteration)==False\n",
+    "\n",
+    "def test_shouldStop_old_new_equal():\n",
+    "    for i in range(10):\n",
+    "        old = np.random.normal(size=(10,15))\n",
+    "        new = old\n",
+    "        iteration=30\n",
+    "        assert shouldStop(old, new, iteration)==True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting test_getLabels.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file test_getLabels.py\n",
+    "import numpy as np\n",
+    "from kmeans_combined_revised import getLabels\n",
+    "\n",
+    "def test_getLables_labels_no_greater_than_k():\n",
+    "    for i in range(10):\n",
+    "        data = np.random.normal(size=(10,15))\n",
+    "        c = data[np.random.choice(range(10),5)]\n",
+    "        k=5\n",
+    "        assert len(np.unique(getLabels(data,c)))<=k and len(np.unique(getLabels(data,c)))>0\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting test_getCentroids.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file test_getCentroids.py\n",
+    "import numpy as np\n",
+    "from kmeans_combined_revised import getCentroids\n",
+    "\n",
+    "def test_getCentroids_when_labels_less_than_k():\n",
+    "    for i in range(10):\n",
+    "        data = np.random.normal(size=(1000,15))\n",
+    "        c = data[np.random.choice(range(1000),10)]\n",
+    "        k=10\n",
+    "        d=15\n",
+    "        labels=np.random.choice(range(7),1000)\n",
+    "        assert getCentroids(data, labels, k, d).shape[0]==k\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -299,20 +400,23 @@
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
       "platform darwin -- Python 3.5.1, pytest-2.8.1, py-1.4.30, pluggy-0.3.1\n",
       "rootdir: /Users/wsswemily/Desktop/Sta663_Final_Project, inifile: \n",
-      "collected 19 items \n",
+      "collected 24 items \n",
       "\u001b[0m\n",
       "test_dist_prob_plus.py .\n",
       "test_dist_prob_plus_parallel.py ..\n",
       "test_distance_sq.py .......\n",
+      "test_getCentroids.py .\n",
+      "test_getLabels.py .\n",
       "test_kmeans.py .\n",
       "test_kmeansplusplus.py .\n",
       "test_kmeansplusplus_parallel.py .\n",
       "test_log_cost.py .\n",
       "test_point_sq.py ...\n",
       "test_reassign_centroids.py .\n",
+      "test_shouldStop.py ...\n",
       "test_weights.py .\n",
       "\n",
-      "\u001b[32m\u001b[1m========================== 19 passed in 45.68 seconds ==========================\u001b[0m\n"
+      "\u001b[1m\u001b[32m========================== 24 passed in 45.90 seconds ==========================\u001b[0m\n"
      ]
     }
    ],
