--- a/kmeansCython.ipynb
+++ b/kmeansCython.ipynb
@@ -2,39 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "%load_ext Cython"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing kmeansCython.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file kmeansCython.py\n",
+    "%%cython -a\n",
     "import numpy as np\n",
+    "cimport numpy as np\n",
     "import pandas as pd\n",
     "from pandas import DataFrame\n",
     "import math\n",
     "\n",
     "#distance square\n",
-    "def dist_sq(a, b):\n",
+    "def dist_sq_c(a, b):\n",
     "    return np.sum((a-b)**2)\n",
     "#minimum distance square for every point to the centroid\n",
-    "def point_sq(data,centroid):\n",
+    "def point_sq_c(data,centroid):\n",
     "    dist=[]\n",
     "    for i in range(data.shape[0]):\n",
-    "        dist.append(min(dist_sq(data[i],c) for c in centroid))\n",
+    "        dist.append(min(dist_sq_c(data[i],c) for c in centroid))\n",
     "    return dist\n",
     "        \n",
-    "#calculate probability\n",
-    "def dist_prob_plus(Dist):\n",
-    "    return Dist/np.sum(Dist)\n",
     "\n",
     "#calculate probability\n",
-    "def dist_prob_parallel(Dist,l):\n",
+    "def dist_prob_parallel_c(Dist,l):\n",
     "    return l*Dist/np.sum(Dist)\n",
     "\n",
     "\n",
     "#step 2: calculate the cost and number of iterations(log(cost))\n",
-    "def log_cost(data_copy,centroid):\n",
-    "    cost=np.sum(point_sq(data_copy,centroid))\n",
+    "def log_cost_c(data_copy,centroid):\n",
+    "    cost=np.sum(point_sq_c(data_copy,centroid))\n",
     "    iteration=math.ceil(np.log(cost))\n",
     "    return iteration\n",
     "\n",
@@ -42,11 +61,11 @@
     "    \n",
     "#calculate weights\n",
     "#step 4: assign the weights\n",
-    "def weight_prob(data_copy, centroid):\n",
+    "def weight_prob_c(data_copy, centroid):\n",
     "    w_size=centroid.shape[0]\n",
     "    w=np.zeros(w_size)\n",
     "    for i in range(data_copy.shape[0]):\n",
-    "        index_w=np.argmin(list(dist_sq(data_copy[i],c) for c in centroid))\n",
+    "        index_w=np.argmin(list(dist_sq_c(data_copy[i],c) for c in centroid))\n",
     "        w[index_w]=w[index_w]+1\n",
     "    return w\n",
     "\n",
@@ -54,7 +73,7 @@
     "\n",
     "#step 5: recluster the weighted points in C into k clusters\n",
     "#reinitialize k centroids\n",
-    "def reassign_centroids(centroid,k,d,w):\n",
+    "def reassign_centroids_c(centroid,k,d,w):\n",
     "    new_centroid=np.zeros([k,d])\n",
     "    for cluster in range(k):\n",
     "        #according to the weights from step 4, calculate the probability that a point is sampled from C\n",
@@ -70,31 +89,7 @@
     "    return new_centroid\n",
     "\n",
     "\n",
-    "def kmeansplusplus(data, k, d):\n",
-    "    #make a copy of the data\n",
-    "    data_copy=data.copy()\n",
-    "    #step 1: sample a point uniformly at random from x\n",
-    "    index=int(np.random.choice(data_copy.shape[0],1))\n",
-    "    centroid=data_copy[index]\n",
-    "    #once the centroid is determined, delete it from the copy \n",
-    "    data_copy=np.delete(data_copy,index,axis=0)\n",
-    "    #step 2: while c<k, sample x from X with probability d^2/phi_x(C)\n",
-    "    for number in range(k-1):\n",
-    "        #calculate the square difference for every point in the copy to its nearest center\n",
-    "        distance=point_sq(data_copy,centroid)\n",
-    "        #calculate the probability\n",
-    "        prob=dist_prob_plus(distance).tolist()\n",
-    "        #randomly sample another centroid\n",
-    "        index=int(np.random.choice(data_copy.shape[0],1,prob))\n",
-    "        #add the new centroid\n",
-    "        centroid=np.vstack([centroid,data_copy[index]])\n",
-    "        #delete the new centroid from the copy\n",
-    "        data_copy=np.delete(data_copy,index,axis=0)\n",
-    "    return centroid\n",
-    "\n",
-    "\n",
-    "\n",
-    "def kmeansparallel(data, k, l, d):\n",
+    "def kmeansparallel_c(data, k, l, d):\n",
     "    #step 1: sample a point uniformly at random from X\n",
     "    index=int(np.random.choice(data.shape[0],1))\n",
     "    centroid=np.array(data[index])\n",
@@ -102,14 +97,14 @@
     "    data_copy=np.delete(data_copy,index,axis=0)\n",
     "    \n",
     "    #step 2: calculate number of iteration\n",
-    "    iteration= log_cost(data_copy,centroid)\n",
+    "    iteration= log_cost_c(data_copy,centroid)\n",
     "    \n",
     "    #step 3: Get initial Centroids C\n",
     "    for number in range(iteration):\n",
     "        #calculate phi_X(C)\n",
-    "        distance=point_sq(data_copy,centroid)\n",
+    "        distance=point_sq_c(data_copy,centroid)\n",
     "        #calculate the probability\n",
-    "        prob=dist_prob_parallel(distance,l).tolist()\n",
+    "        prob=dist_prob_parallel_c(distance,l).tolist()\n",
     "        for n in range(data_copy.shape[0]):\n",
     "            #if the probability is greater than the random uniform\n",
     "            if prob[n]>np.random.uniform():\n",
@@ -119,34 +114,34 @@
     "                data_copy=np.delete(data_copy,n,axis=0)\n",
     "    \n",
     "    #step 4: calculate the weight probability\n",
-    "    w=weight_prob(data_copy,centroid)\n",
+    "    w=weight_prob_c(data_copy,centroid)\n",
     "    \n",
     "    #step 5: recluster the weighted points in C into k clusters\n",
     "    #reinitialize k centroids\n",
-    "    new_centroids=reassign_centroids(centroid,k,d,w)\n",
+    "    new_centroids=reassign_centroids_c(centroid,k,d,w)\n",
     "    \n",
     "    return new_centroids\n",
     "\n",
     "    \n",
     "#with the initialization of the centroids from the function kmeansplusplus\n",
     "#plug in the original data(dataSet), initializtions(initial) and the dimension of the data(d)\n",
-    "def kmeans(dataSet, initial, k, d):\n",
+    "def kmeans_c(dataSet, initial, k, d):\n",
     "    centroids=initial\n",
     "    # Initialize book keeping vars.\n",
     "    iterations = 0\n",
     "    oldCentroids = np.zeros(initial.shape)\n",
     "    \n",
     "    # Run the main k-means algorithm\n",
-    "    while not shouldStop(oldCentroids, centroids, iterations):\n",
+    "    while not shouldStop_c(oldCentroids, centroids, iterations):\n",
     "        # Save old centroids for convergence test. Book keeping.\n",
     "        oldCentroids = centroids\n",
     "        iterations += 1\n",
     "        \n",
     "        # Assign labels to each datapoint based on centroids\n",
-    "        l= getLabels(dataSet, centroids)\n",
+    "        l= getLabels_c(dataSet, centroids)\n",
     "        \n",
     "        # Assign centroids based on datapoint labels\n",
-    "        centroids = getCentroids(dataSet, l, k, d)\n",
+    "        centroids = getCentroids_c(dataSet, l, k, d)\n",
     "        \n",
     "    # We can get the labels too by calling getLabels(dataSet, centroids)\n",
     "    return centroids, np.array(l)\n",
@@ -155,24 +150,24 @@
     "# Returns True or False if k-means is done. K-means terminates either\n",
     "# because it has run a maximum number of iterations OR the centroids\n",
     "# stop changing.\n",
-    "def shouldStop(oldCentroids, centroids, iterations):\n",
+    "def shouldStop_c(oldCentroids, centroids, iterations):\n",
     "    if iterations > 50: return True\n",
     "    return oldCentroids.all == centroids.all\n",
     "# Function: Get Labels\n",
     "# -------------\n",
     "# Returns a label for each piece of data in the dataset. \n",
-    "def getLabels(dataSet, centroids):\n",
+    "def getLabels_c(dataSet, centroids):\n",
     "    # For each element in the dataset, chose the closest centroid. \n",
     "    # Make that centroid the element's label.\n",
     "    l=[]\n",
     "    for i in range(dataSet.shape[0]):\n",
     "        #arg min as the label\n",
-    "        l.append(np.argmin(list(dist_sq(dataSet[i],c) for c in centroids)))\n",
+    "        l.append(np.argmin(list(dist_sq_c(dataSet[i],c) for c in centroids)))\n",
     "    return l\n",
     "# Function: Get Centroids\n",
     "# -------------\n",
     "# Returns k random centroids, each of dimension n.\n",
-    "def getCentroids(dataSet, labels, k, d):\n",
+    "def getCentroids_c(dataSet, labels, k, d):\n",
     "    # Each centroid is the arithmetic mean of the points that\n",
     "    # have that centroid's label. Important: If a centroid is empty (no points have\n",
     "    # that centroid's label) you should randomly re-initialize it.\n",
@@ -185,6 +180,78 @@
     "        data_new=np.vstack([data_new,np.random.random([diff,d])])    \n",
     "    return data_new"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import simulatedData\n",
+    "from simulatedData import generate_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data=generate_data(5,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.73701299, -2.36373969, -0.50747678, -2.56204426, -0.322207  ,\n",
+       "        -0.01672649, -1.41624065,  2.13718385,  1.34814952, -1.54616745,\n",
+       "        -0.89755279,  0.36476072, -1.79191988, -0.31313603,  0.31674771],\n",
+       "       [ 1.12271778,  2.02485727, -1.58081317, -0.17103198,  0.85372904,\n",
+       "         2.1812067 ,  0.55551775,  0.10286616, -0.86599975, -1.14849751,\n",
+       "         0.22119772, -2.7433041 , -0.07445574, -1.72928297, -1.42476342],\n",
+       "       [ 0.98929046,  0.32069391,  0.37031871,  3.90709972, -0.10797519,\n",
+       "         1.4680815 , -0.65956523,  0.80120691,  0.68807125, -2.20354295,\n",
+       "        -1.35630514, -0.35047832,  2.21851695,  0.66814139, -0.1273907 ],\n",
+       "       [-1.15959668,  1.25245262,  1.55972269,  0.80372513, -0.23860719,\n",
+       "        -2.57016268,  1.72963621,  1.52137299,  1.08355177,  1.10554944,\n",
+       "         0.79023434, -0.66028805,  0.72828479,  0.6754275 , -1.06605115],\n",
+       "       [-0.27199997,  2.52956834, -1.68681316,  0.40130807,  0.64496607,\n",
+       "         0.1049405 , -0.4511518 ,  0.43466852,  0.59116666, -0.30935081,\n",
+       "        -2.16006858, -0.63134813,  0.09926017, -0.57354984,  2.04018123]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=10\n",
+    "d=15\n",
+    "k=5\n",
+    "initial=kmeansparallel_c(data, k, l, d)\n",
+    "initial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
