--- a/kmeansCython.ipynb
+++ b/kmeansCython.ipynb
@@ -2,18 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "%load_ext Cython"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -22,13 +11,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing kmeansCython.py\n"
+      "Overwriting kmeansCython.py\n"
      ]
     }
    ],
    "source": [
     "%%file kmeansCython.py\n",
-    "%%cython -a\n",
+    "%%cython\n",
     "import numpy as np\n",
     "cimport numpy as np\n",
     "import pandas as pd\n",
@@ -179,69 +168,6 @@
     "        diff=k-len(np.unique(labels))\n",
     "        data_new=np.vstack([data_new,np.random.random([diff,d])])    \n",
     "    return data_new"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import simulatedData\n",
-    "from simulatedData import generate_data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "data=generate_data(5,1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.73701299, -2.36373969, -0.50747678, -2.56204426, -0.322207  ,\n",
-       "        -0.01672649, -1.41624065,  2.13718385,  1.34814952, -1.54616745,\n",
-       "        -0.89755279,  0.36476072, -1.79191988, -0.31313603,  0.31674771],\n",
-       "       [ 1.12271778,  2.02485727, -1.58081317, -0.17103198,  0.85372904,\n",
-       "         2.1812067 ,  0.55551775,  0.10286616, -0.86599975, -1.14849751,\n",
-       "         0.22119772, -2.7433041 , -0.07445574, -1.72928297, -1.42476342],\n",
-       "       [ 0.98929046,  0.32069391,  0.37031871,  3.90709972, -0.10797519,\n",
-       "         1.4680815 , -0.65956523,  0.80120691,  0.68807125, -2.20354295,\n",
-       "        -1.35630514, -0.35047832,  2.21851695,  0.66814139, -0.1273907 ],\n",
-       "       [-1.15959668,  1.25245262,  1.55972269,  0.80372513, -0.23860719,\n",
-       "        -2.57016268,  1.72963621,  1.52137299,  1.08355177,  1.10554944,\n",
-       "         0.79023434, -0.66028805,  0.72828479,  0.6754275 , -1.06605115],\n",
-       "       [-0.27199997,  2.52956834, -1.68681316,  0.40130807,  0.64496607,\n",
-       "         0.1049405 , -0.4511518 ,  0.43466852,  0.59116666, -0.30935081,\n",
-       "        -2.16006858, -0.63134813,  0.09926017, -0.57354984,  2.04018123]])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l=10\n",
-    "d=15\n",
-    "k=5\n",
-    "initial=kmeansparallel_c(data, k, l, d)\n",
-    "initial"
    ]
   },
   {
