--- a/Comparisons_revised.ipynb
+++ b/Comparisons_revised.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -23,39 +23,39 @@
     {
      "data": {
       "text/plain": [
-       "array([[ -2.86245798e-01,  -2.08826540e-01,  -1.13379169e+00, ...,\n",
-       "         -1.34778264e+00,  -2.39926062e-01,   3.71476148e-01],\n",
-       "       [  5.49136605e-01,   4.75352121e-01,   4.11610443e-01, ...,\n",
-       "         -1.12122868e+00,   4.45350210e-01,   1.23639785e+00],\n",
-       "       [  6.47759705e-01,  -4.75032638e-01,   7.31782244e-01, ...,\n",
-       "          5.53060319e-01,  -5.91701592e-01,   3.05862242e-01],\n",
+       "array([[ 1.02259916,  1.74471006,  0.55493895, ...,  0.16430823,\n",
+       "         1.34920621, -0.70046235],\n",
+       "       [-0.36970751, -0.84898731,  0.31952764, ...,  1.19790443,\n",
+       "         0.76244968,  0.38114129],\n",
+       "       [ 1.13082221, -0.11550276,  0.77563537, ...,  0.14087947,\n",
+       "         0.2500154 , -0.80612726],\n",
        "       ..., \n",
-       "       [ -1.32779366e+00,  -5.07997976e-01,  -1.28351595e+00, ...,\n",
-       "         -2.53281719e-01,  -2.89509199e-01,  -6.26855534e-02],\n",
-       "       [  4.72296764e-01,   9.86041287e-01,  -1.05034560e+00, ...,\n",
-       "          6.15505928e-01,  -8.27498024e-01,   7.96331519e-01],\n",
-       "       [  1.44367371e+00,   4.55108564e-01,  -5.29888288e-01, ...,\n",
-       "          9.46264489e-04,   1.56215127e+00,   1.48746458e+00]])"
+       "       [ 1.07978366, -0.15814348,  1.12436705, ..., -1.1071836 ,\n",
+       "        -1.97512983, -0.64944315],\n",
+       "       [ 1.4030101 ,  1.21336003,  1.03122367, ...,  1.19245794,\n",
+       "         1.20031009,  0.0573252 ],\n",
+       "       [ 2.3569814 ,  0.38054503,  0.43570672, ...,  3.06085296,\n",
+       "         1.03061974,  3.21971214]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#test on simulated data\n",
-    "k=5\n",
+    "k=4\n",
     "R=1\n",
     "d=15\n",
-    "l=10\n",
+    "l=2*k\n",
     "data=generate_data(k,R)\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -64,17 +64,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 1.6 s per loop\n"
+      "1 loop, best of 3: 23.2 s per loop\n"
      ]
     }
    ],
    "source": [
-    "%timeit kmeansplusplus(data,k,d)"
+    "%timeit kmeans(data,kmeansplusplus(data,k,d),k, d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -83,12 +83,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 7.76 s per loop\n"
+      "1 loop, best of 3: 29.8 s per loop\n"
      ]
     }
    ],
    "source": [
-    "%timeit kmeansparallel(data,k,l,d)"
+    "%timeit kmeans(data,kmeansparallel(data,k,l,d),k,d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import kmeans\n",
+    "r=5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 loop, best of 3: 1min 47s per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit kmeans.kmeansparallel(data,k,l,d,r)"
    ]
   },
   {
@@ -102,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -113,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -122,12 +153,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 2.01 s per loop\n"
+      "1 loop, best of 3: 23.7 s per loop\n"
      ]
     }
    ],
    "source": [
-    "%timeit kmeans_Numba_revised.kmeansparallel(data,k,l,d)"
+    "%timeit kmeans(data, kmeans_Numba_revised.kmeansparallel(data,k,l,d),k,d)"
    ]
   },
   {
