--- a/Parallelizing-K-means-Part-II.ipynb
+++ b/Parallelizing-K-means-Part-II.ipynb
@@ -111,14 +111,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2 Overview of the Algorithms"
+    "### 2 K-means++"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.1 K-means++"
+    "#### 2.1 Overview"
    ]
   },
   {
@@ -134,7 +134,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.2 K-means$||$"
+    "#### 2.2 Pseudo code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.3 Implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3 K-means$||$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.1 Overview"
    ]
   },
   {
@@ -162,42 +193,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3 Implementation"
+    "#### 3.2 Pseudo code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.3 Implementation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.1 Sudo Code"
+    "### 4 Testing"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ADD TEXT HERE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 3.2 Data Simulation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "ADD TEXT HERE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 3.3 Testing"
+    "#### 4.1 Function 1"
    ]
   },
   {
@@ -211,28 +233,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4 Optimization"
+    "### 5 Optimization"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.1 Numba"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "ADD TEXT HERE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 4.2 Cython"
+    "#### 5.1 Numba"
    ]
   },
   {
@@ -246,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.3 Parallelization"
+    "#### 5.2 Cython"
    ]
   },
   {
@@ -260,14 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 5.1 Comparsions of Numerical Results"
+    "#### 5.3 Parallelization"
    ]
   },
   {
@@ -281,7 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5.2 Comparsions of Clustering Arrangements"
+    "#### 5.4 Comparsions of Efficiency"
    ]
   },
   {
@@ -295,7 +296,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5.1 Comparsions of Efficiency"
+    "### 6 Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.1 Data simulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To generate the dataset,\n",
+    "we sampled k centers from a 15-dimensional spherical Gaussian\n",
+    "distribution with mean at the origin and variance R ∈\n",
+    "{1, 10, 100}. We then added points from Gaussian distributions\n",
+    "of unit variance around each center. Given the k centers,\n",
+    "this is a mixture of k spherical Gaussians with equal\n",
+    "weights. Note that the Gaussians are separated in terms\n",
+    "of probability mass — even if only marginally for the case\n",
+    "R = 1 — and therefore the value of the optimal k-clustering\n",
+    "can be well approximated using the centers of these Gaussians.\n",
+    "The number of sampled points from this mixture of\n",
+    "Gaussians is n = 10, 000."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.2 Real world data"
    ]
   },
   {
@@ -309,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6 Conclusions"
+    "### 7 Results"
    ]
   },
   {
@@ -317,6 +350,13 @@
    "metadata": {},
    "source": [
     "ADD TEXT HERE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7 Conclusions"
    ]
   },
   {
