--- a/kmeans_mc.ipynb
+++ b/kmeans_mc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 161,
    "metadata": {
     "collapsed": true
    },
@@ -16,99 +16,84 @@
     "from functools import partial\n",
     "\n",
     "#distance square\n",
-    "def dist_sq(a, b):\n",
+    "def dist_sq(a, b, axis=0):\n",
     "    return np.sum((a-b)**2)\n",
-    "#minimum distance square for every point to the centroid\n",
-    "def point_sq(data,centroid):\n",
-    "    dist=[]\n",
-    "    for i in range(data.shape[0]):\n",
-    "        dist.append(min(dist_sq(data[i],c) for c in centroid))\n",
-    "    return dist\n",
+    "\n",
+    "\n",
+    "def cost(data,centroid):\n",
+    "    return np.sum([min([dist_sq(d,centroid,axis=1)]) for d in data])\n",
     "        \n",
     "\n",
     "#calculate probability\n",
-    "def dist_prob_parallel(Dist,l):\n",
-    "    return l*Dist/np.sum(Dist)\n",
+    "def dist_prob_parallel(data,centroid,l):\n",
+    "    phi= cost(data,centroid)\n",
+    "    return np.array([min([dist_sq(d, centroid,axis=1)])*l/phi for d in data])\n",
     "\n",
     "\n",
     "#step 2: calculate the cost and number of iterations(log(cost))\n",
-    "def log_cost(data_copy,centroid):\n",
-    "    pool = Pool(processes=cpu_count())\n",
-    "    min_dist_sq = partial(point_sq, centroid)\n",
-    "    cost = np.sum(pool.map(min_dist_sq, data_copy))\n",
-    "    iteration=math.ceil(np.log(cost))\n",
-    "    pool.close()\n",
-    "    pool.terminate()\n",
-    "    return iteration\n",
+    "#def log_cost(data,centroid):\n",
+    "    #pool = Pool(processes=cpu_count())\n",
+    "    #min_dist_sq = partial(point_sq, centroid)\n",
+    "    #cost = np.sum(pool.map(min_dist_sq, data))\n",
+    "    #iteration=math.ceil(np.log(cost))\n",
+    "    #pool.close()\n",
+    "    #pool.terminate()\n",
+    "    #return iteration\n",
     "\n",
     "    \n",
     "    \n",
     "#calculate weights\n",
     "#step 4: assign the weights\n",
-    "def weight_prob(data_copy, centroid):\n",
-    "    w_size=centroid.shape[0]\n",
-    "    w=np.zeros(w_size)\n",
-    "    for i in range(data_copy.shape[0]):\n",
-    "        index_w=np.argmin(list(dist_sq(data_copy[i],c) for c in centroid))\n",
-    "        w[index_w]=w[index_w]+1\n",
-    "    return w\n",
+    "def weight_prob(centroid,data):\n",
+    "    min_c = [np.argmin(dist_sq(centroid, d, axis = 1)) for d in data];\n",
+    "    ## number of points which is closest to each s in c\n",
+    "    num_closest = np.array([min_c.count(i) for i in range(len(centroid))]).astype(float);\n",
+    "    ## return normalized weight\n",
+    "    return num_closest/np.sum(num_closest)\n",
     "\n",
     "\n",
     "\n",
     "#step 5: recluster the weighted points in C into k clusters\n",
     "#reinitialize k centroids\n",
-    "def reassign_centroids(centroid,k,d,w):\n",
-    "    new_centroid=np.zeros([k,d])\n",
-    "    for cluster in range(k):\n",
-    "        #according to the weights from step 4, calculate the probability that a point is sampled from C\n",
-    "        prob_w=list(w/sum(w))\n",
-    "        #sample a new centroid\n",
-    "        new_index=np.random.choice(centroid.shape[0],1,prob_w)\n",
-    "        #store the new centroid\n",
-    "        new_centroid[cluster]=centroid[new_index]\n",
-    "        #delete the new centroid from the centroid\n",
-    "        centroid=np.delete(centroid,new_index,axis=0)\n",
-    "        #delete the correponding weight\n",
-    "        w=np.delete(w,new_index,axis=0)\n",
-    "    return new_centroid\n",
+    "def reassign_centroids(data,centroid,k,l,w):\n",
+    "    c_final = data[np.random.choice(range(len(centroid)),size=1,p=w),]\n",
+    "    data_final = centroid\n",
+    "    for i in range(k-1):\n",
+    "        new_prb = dist_prob_parallel(data_final,c_final,l) * w\n",
+    "        c_fin_add = data[np.random.choice(range(len(centroid)),size=1,p=new_prb/np.sum(new_prb)),]\n",
+    "        c_final = np.vstack((c_final,c_fin_add))\n",
+    "    return c_final\n",
     "\n",
+    "    \n",
     "\n",
-    "\n",
-    "def kmeansparallel(data, k, l, d, r):\n",
+    "def kmeansparallel(data, k, l, r):\n",
     "    #step 1: sample a point uniformly at random from X\n",
-    "    index=int(np.random.choice(data.shape[0],1))\n",
-    "    centroid=np.array(data[index])\n",
-    "    data_copy=data.copy()\n",
-    "    data_copy=np.delete(data_copy,index,axis=0)\n",
+    "    centroid=np.array(data[np.random.choice(range(len(data)),1),])\n",
     "    \n",
     "    #step 2: calculate number of iteration\n",
-    "    iteration= log_cost(data_copy,centroid)\n",
+    "    iteration= np.ceil(np.log(cost(data,centroid))).astype(int)  \n",
     "    \n",
     "    #step 3: Get initial Centroids C\n",
     "    for round in range(r):\n",
-    "        for number in range(iteration):\n",
-    "        #calculate phi_X(C)\n",
-    "            distance=point_sq(data_copy,centroid)\n",
-    "        #calculate the probability\n",
-    "            prob=dist_prob_parallel(distance,l).tolist()\n",
-    "            \n",
-    "            \n",
-    "            new_c=data_copy[prob>np.random.uniform(data_copy.shape[0])]\n",
-    "            \n",
-    "            centroid=np.vstack([centroid,np.array(new_c)])\n",
-    "            #delete that point from the copy\n",
-    "            data_copy=np.delete(data_copy,n,axis=0)\n",
+    "        for i in range(iteration):\n",
+    "            centroid_added = data[dist_prob_parallel(data,centroid,l)>np.random.uniform(size = len(data)),]\n",
+    "            centroid = np.vstack((centroid,centroid_added))  \n",
+    "    \n",
+    "    print(centroid)\n",
     "    \n",
     "    #step 4: calculate the weight probability\n",
-    "    w=weight_prob(data_copy,centroid)\n",
+    "    w=weight_prob(centroid,data)\n",
+    "    \n",
+    "    print(w)\n",
     "    \n",
     "    #step 5: recluster the weighted points in C into k clusters\n",
     "    #reinitialize k centroids\n",
-    "    new_centroids=reassign_centroids(centroid,k,d,w)\n",
+    "    final_centroids=reassign_centroids(data,centroid,k,l,w)\n",
     "    \n",
-    "    return new_centroids\n",
+    "    return final_centroids\n",
     "\n",
     "    \n",
+    "\n",
     "#with the initialization of the centroids from the function kmeansplusplus\n",
     "#plug in the original data(dataSet), initializtions(initial) and the dimension of the data(d)\n",
     "def kmeans(dataSet, initial, k, d):\n",
@@ -178,42 +163,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 162,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "sim_data=generate_data(4,100,2)\n",
-    "k=4\n",
-    "l=8\n",
+    "sim_data=generate_data(4,10,2)\n",
+    "k=3\n",
+    "l=2*k\n",
     "d=2\n",
-    "r=1"
+    "r=1\n",
+    "centroid=sim_data[np.random.choice(range(100),k),]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 163,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-6.88605923 -0.46102536]\n",
+      " [-2.41023317  0.4073007 ]\n",
+      " [ 0.20423863 -6.22064562]\n",
+      " [ 2.60355633 -2.326925  ]\n",
+      " [ 1.08738458 -4.17231211]\n",
+      " [ 2.36820119 -5.36085607]\n",
+      " [-2.94472194 -1.06849135]\n",
+      " [-0.52447596 -3.76790967]\n",
+      " [-2.51625372 -0.39641968]\n",
+      " [-6.47632756 -1.85614733]\n",
+      " [-3.51646295 -0.39246455]\n",
+      " [-2.03316996 -0.30672732]\n",
+      " [-2.02325758  1.32889932]\n",
+      " [-6.89483529  0.16144599]\n",
+      " [-3.14712922  1.51783058]\n",
+      " [ 1.65506777 -4.21384562]\n",
+      " [-0.48998038  2.18875639]\n",
+      " [-5.52132854 -1.38781602]\n",
+      " [-3.8603341   0.71786869]\n",
+      " [-6.54565721 -0.96369736]\n",
+      " [-3.26832223  1.31575341]\n",
+      " [-5.79935235  0.07717894]\n",
+      " [-7.54265793 -1.83507491]\n",
+      " [-5.57038219 -0.02781417]\n",
+      " [ 1.99092988 -2.86659645]\n",
+      " [-6.13963641 -1.94841029]\n",
+      " [-6.6847535  -1.76833252]\n",
+      " [-5.8253138  -1.34543069]\n",
+      " [-6.29877532 -1.57361754]\n",
+      " [-1.80330597 -0.05279039]\n",
+      " [-0.83817793  1.67138705]\n",
+      " [ 0.51169587 -3.71022503]\n",
+      " [-4.74297784 -1.39285099]\n",
+      " [-4.04421043  0.80311203]\n",
+      " [-5.52674902  0.02205338]\n",
+      " [ 0.06145655 -0.12920348]\n",
+      " [-3.24870311 -0.51487893]\n",
+      " [-2.78296046 -0.28588163]\n",
+      " [ 0.66524385 -1.6629143 ]\n",
+      " [ 0.60517212 -0.49351026]\n",
+      " [-0.87918516 -0.88551013]\n",
+      " [-0.51934664 -3.11214544]\n",
+      " [ 0.01819553 -1.82671685]\n",
+      " [-1.51896937  1.79266561]\n",
+      " [ 1.8058765  -2.74158126]\n",
+      " [-2.56579988  1.33738876]\n",
+      " [-1.44020353 -0.36462746]\n",
+      " [ 0.50734176 -1.53178241]\n",
+      " [ 1.71813538 -3.90638881]\n",
+      " [ 0.11328647 -2.58697886]\n",
+      " [ 0.98133073 -2.98083955]\n",
+      " [ 1.13017315 -2.85232839]\n",
+      " [-2.06677738  1.94961902]\n",
+      " [-3.82944398 -2.30891679]\n",
+      " [ 3.88480395 -4.26549358]\n",
+      " [-1.02405582  0.56582279]\n",
+      " [ 0.22759047 -3.30554603]\n",
+      " [-3.32698558  0.60057092]\n",
+      " [-5.99423767 -0.8379919 ]\n",
+      " [-4.76040551 -1.32063571]\n",
+      " [-8.30388129 -0.21499596]\n",
+      " [-5.21506599  0.70826779]\n",
+      " [-1.45747141 -1.41638689]\n",
+      " [-3.46984464  1.68269095]\n",
+      " [-1.34051512 -3.02435783]\n",
+      " [-4.56378172 -0.93634215]\n",
+      " [-3.09170199  1.32146406]\n",
+      " [-2.62218806 -0.75963829]\n",
+      " [-5.97234983 -0.62156048]\n",
+      " [-3.22939165 -1.24797001]\n",
+      " [-7.18239507 -0.39406724]\n",
+      " [-6.01947258 -0.785758  ]\n",
+      " [-2.83953988  0.34972467]\n",
+      " [-7.06580305 -1.27909772]\n",
+      " [-7.85681903 -1.41095315]\n",
+      " [-3.22105207  1.47714717]\n",
+      " [-5.37266722 -0.66115656]\n",
+      " [-5.3539816  -3.01912783]\n",
+      " [-6.88246674 -1.79452513]\n",
+      " [-1.70564602 -2.33592638]\n",
+      " [-5.49568426 -1.84319166]\n",
+      " [-0.66518489 -0.24403018]\n",
+      " [ 0.75477779 -3.45277578]\n",
+      " [-0.64791953 -2.9789452 ]\n",
+      " [-1.61458914  0.67030605]\n",
+      " [-5.14735129 -1.13199751]\n",
+      " [ 1.61615663 -4.4160386 ]\n",
+      " [ 0.42699663 -2.88477113]]\n",
+      "[ 1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([[ -2.03339435,   3.21661774],\n",
-       "       [  3.01049688,  -7.27112753],\n",
-       "       [  0.45703104,   5.8049294 ],\n",
-       "       [  8.43303942, -19.4855193 ]])"
+       "array([[-2.28507195, -0.42850533],\n",
+       "       [-2.28507195, -0.42850533],\n",
+       "       [-2.28507195, -0.42850533]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kmeansparallel(sim_data, k, l, d, r)"
+    "kmeansparallel(sim_data, k, l, r)"
    ]
   },
   {
