--- a/kmeans_mc.ipynb
+++ b/kmeans_mc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 171,
    "metadata": {
     "collapsed": true
    },
@@ -11,58 +11,52 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pandas import DataFrame\n",
-    "import math\n",
     "from multiprocessing import Pool, cpu_count\n",
     "from functools import partial\n",
     "\n",
-    "#distance square\n",
-    "def dist_sq(a, b, axis=0):\n",
-    "    return np.sum((a-b)**2)\n",
+    "##calculate the distance square\n",
+    "def dist_sq(a, b, axis = 0):\n",
+    "    '''a,b are numpy arrays with the same shape'''\n",
+    "    return np.sum((a-b)**2,axis)\n",
     "\n",
     "\n",
+    "##calculate the cost\n",
     "def cost(data,centroid):\n",
-    "    return np.sum([min([dist_sq(d,centroid,axis=1)]) for d in data])\n",
-    "        \n",
+    "    '''The function caculates the sum of the distance square of each point in the data set to its closest centroid\n",
+    "    parameters: data and centroids\n",
+    "    output:cost(a number)\n",
+    "    '''\n",
+    "    return np.sum([min(dist_sq(centroid, d, axis = 1)) for d in data])\n",
     "\n",
-    "#calculate probability\n",
+    "##calculate the parallel probability\n",
     "def dist_prob_parallel(data,centroid,l):\n",
+    "    '''The function caculates the sum of the distance square to the closest centroid for each point in the data set\n",
+    "    parameters: data and centroids\n",
+    "    output:probability with length=len(data)\n",
+    "    '''\n",
     "    phi= cost(data,centroid)\n",
-    "    return np.array([min([dist_sq(d, centroid,axis=1)])*l/phi for d in data])\n",
+    "    return np.array([(min(dist_sq(centroid, d, axis = 1)))*l/phi for d in data])\n",
     "\n",
     "\n",
-    "#step 2: calculate the cost and number of iterations(log(cost))\n",
-    "#def log_cost(data,centroid):\n",
-    "    #pool = Pool(processes=cpu_count())\n",
-    "    #min_dist_sq = partial(point_sq, centroid)\n",
-    "    #cost = np.sum(pool.map(min_dist_sq, data))\n",
-    "    #iteration=math.ceil(np.log(cost))\n",
-    "    #pool.close()\n",
-    "    #pool.terminate()\n",
-    "    #return iteration\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "#calculate weights\n",
-    "#step 4: assign the weights\n",
-    "def weight_prob(centroid,data):\n",
-    "    min_c = [np.argmin(dist_sq(centroid, d, axis = 1)) for d in data];\n",
+    "#weight probability\n",
+    "def weight_prob(data,centroid):\n",
+    "    closest_center = [np.argmin(dist_sq(centroid, d, axis = 1)) for d in data]\n",
     "    ## number of points which is closest to each s in c\n",
-    "    num_closest = np.array([min_c.count(i) for i in range(len(centroid))]).astype(float);\n",
+    "    number_= np.array([closest_center.count(i) for i in range(len(centroid))]).astype(float)\n",
     "    ## return normalized weight\n",
-    "    return num_closest/np.sum(num_closest)\n",
-    "\n",
+    "    return number_/np.sum(number_)\n",
     "\n",
     "\n",
     "#step 5: recluster the weighted points in C into k clusters\n",
     "#reinitialize k centroids\n",
     "def reassign_centroids(data,centroid,k,l,w):\n",
-    "    c_final = data[np.random.choice(range(len(centroid)),size=1,p=w),]\n",
-    "    data_final = centroid\n",
+    "    new_centroids = data[np.random.choice(range(len(centroid)),size=1,p=w),]\n",
+    "    potential_centroids = centroid\n",
     "    for i in range(k-1):\n",
-    "        new_prb = dist_prob_parallel(data_final,c_final,l) * w\n",
-    "        c_fin_add = data[np.random.choice(range(len(centroid)),size=1,p=new_prb/np.sum(new_prb)),]\n",
-    "        c_final = np.vstack((c_final,c_fin_add))\n",
-    "    return c_final\n",
+    "        prob = dist_prob_parallel(potential_centroids,new_centroids,l) * w\n",
+    "        new_centroid = data[np.random.choice(range(len(centroid)),size=1,p=prob/np.sum(prob)),]\n",
+    "        new_centroids = np.vstack((new_centroids,new_centroid))\n",
+    "    return new_centroids\n",
     "\n",
     "    \n",
     "\n",
@@ -79,12 +73,8 @@
     "            centroid_added = data[dist_prob_parallel(data,centroid,l)>np.random.uniform(size = len(data)),]\n",
     "            centroid = np.vstack((centroid,centroid_added))  \n",
     "    \n",
-    "    print(centroid)\n",
-    "    \n",
     "    #step 4: calculate the weight probability\n",
-    "    w=weight_prob(centroid,data)\n",
-    "    \n",
-    "    print(w)\n",
+    "    w=weight_prob(data,centroid)\n",
     "    \n",
     "    #step 5: recluster the weighted points in C into k clusters\n",
     "    #reinitialize k centroids\n",
@@ -151,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 172,
    "metadata": {
     "collapsed": true
    },
@@ -163,13 +153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 174,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "sim_data=generate_data(4,10,2)\n",
+    "sim_data=generate_data(4,50,2)\n",
     "k=3\n",
     "l=2*k\n",
     "d=2\n",
@@ -179,125 +169,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 175,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "c=kmeansparallel(sim_data, k, l, r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-6.88605923 -0.46102536]\n",
-      " [-2.41023317  0.4073007 ]\n",
-      " [ 0.20423863 -6.22064562]\n",
-      " [ 2.60355633 -2.326925  ]\n",
-      " [ 1.08738458 -4.17231211]\n",
-      " [ 2.36820119 -5.36085607]\n",
-      " [-2.94472194 -1.06849135]\n",
-      " [-0.52447596 -3.76790967]\n",
-      " [-2.51625372 -0.39641968]\n",
-      " [-6.47632756 -1.85614733]\n",
-      " [-3.51646295 -0.39246455]\n",
-      " [-2.03316996 -0.30672732]\n",
-      " [-2.02325758  1.32889932]\n",
-      " [-6.89483529  0.16144599]\n",
-      " [-3.14712922  1.51783058]\n",
-      " [ 1.65506777 -4.21384562]\n",
-      " [-0.48998038  2.18875639]\n",
-      " [-5.52132854 -1.38781602]\n",
-      " [-3.8603341   0.71786869]\n",
-      " [-6.54565721 -0.96369736]\n",
-      " [-3.26832223  1.31575341]\n",
-      " [-5.79935235  0.07717894]\n",
-      " [-7.54265793 -1.83507491]\n",
-      " [-5.57038219 -0.02781417]\n",
-      " [ 1.99092988 -2.86659645]\n",
-      " [-6.13963641 -1.94841029]\n",
-      " [-6.6847535  -1.76833252]\n",
-      " [-5.8253138  -1.34543069]\n",
-      " [-6.29877532 -1.57361754]\n",
-      " [-1.80330597 -0.05279039]\n",
-      " [-0.83817793  1.67138705]\n",
-      " [ 0.51169587 -3.71022503]\n",
-      " [-4.74297784 -1.39285099]\n",
-      " [-4.04421043  0.80311203]\n",
-      " [-5.52674902  0.02205338]\n",
-      " [ 0.06145655 -0.12920348]\n",
-      " [-3.24870311 -0.51487893]\n",
-      " [-2.78296046 -0.28588163]\n",
-      " [ 0.66524385 -1.6629143 ]\n",
-      " [ 0.60517212 -0.49351026]\n",
-      " [-0.87918516 -0.88551013]\n",
-      " [-0.51934664 -3.11214544]\n",
-      " [ 0.01819553 -1.82671685]\n",
-      " [-1.51896937  1.79266561]\n",
-      " [ 1.8058765  -2.74158126]\n",
-      " [-2.56579988  1.33738876]\n",
-      " [-1.44020353 -0.36462746]\n",
-      " [ 0.50734176 -1.53178241]\n",
-      " [ 1.71813538 -3.90638881]\n",
-      " [ 0.11328647 -2.58697886]\n",
-      " [ 0.98133073 -2.98083955]\n",
-      " [ 1.13017315 -2.85232839]\n",
-      " [-2.06677738  1.94961902]\n",
-      " [-3.82944398 -2.30891679]\n",
-      " [ 3.88480395 -4.26549358]\n",
-      " [-1.02405582  0.56582279]\n",
-      " [ 0.22759047 -3.30554603]\n",
-      " [-3.32698558  0.60057092]\n",
-      " [-5.99423767 -0.8379919 ]\n",
-      " [-4.76040551 -1.32063571]\n",
-      " [-8.30388129 -0.21499596]\n",
-      " [-5.21506599  0.70826779]\n",
-      " [-1.45747141 -1.41638689]\n",
-      " [-3.46984464  1.68269095]\n",
-      " [-1.34051512 -3.02435783]\n",
-      " [-4.56378172 -0.93634215]\n",
-      " [-3.09170199  1.32146406]\n",
-      " [-2.62218806 -0.75963829]\n",
-      " [-5.97234983 -0.62156048]\n",
-      " [-3.22939165 -1.24797001]\n",
-      " [-7.18239507 -0.39406724]\n",
-      " [-6.01947258 -0.785758  ]\n",
-      " [-2.83953988  0.34972467]\n",
-      " [-7.06580305 -1.27909772]\n",
-      " [-7.85681903 -1.41095315]\n",
-      " [-3.22105207  1.47714717]\n",
-      " [-5.37266722 -0.66115656]\n",
-      " [-5.3539816  -3.01912783]\n",
-      " [-6.88246674 -1.79452513]\n",
-      " [-1.70564602 -2.33592638]\n",
-      " [-5.49568426 -1.84319166]\n",
-      " [-0.66518489 -0.24403018]\n",
-      " [ 0.75477779 -3.45277578]\n",
-      " [-0.64791953 -2.9789452 ]\n",
-      " [-1.61458914  0.67030605]\n",
-      " [-5.14735129 -1.13199751]\n",
-      " [ 1.61615663 -4.4160386 ]\n",
-      " [ 0.42699663 -2.88477113]]\n",
-      "[ 1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
-      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
-      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
-      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
-      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array([[-2.28507195, -0.42850533],\n",
-       "       [-2.28507195, -0.42850533],\n",
-       "       [-2.28507195, -0.42850533]])"
+       "(array([[ 12.4740532 ,  13.59686713],\n",
+       "        [  4.19262668,   0.87382565],\n",
+       "        [ 13.55633378,  12.42110573]]), array([1, 1, 0, ..., 1, 1, 1]))"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kmeansparallel(sim_data, k, l, r)"
+    "kmeans(sim_data,c,k,d)"
    ]
   },
   {
