fixed bug with distance fn

--- a/simulatedData.ipynb
+++ b/simulatedData.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -42,7 +42,7 @@
     "    centers = np.random.multivariate_normal(np.zeros(dim),  np.eye(dim)*var, k)\n",
     "    return centers\n",
     "\n",
-    "def generate_data(k, var, dim):\n",
+    "def generate_data(k, var, dim, npoints):\n",
     "    \"\"\"Generate data points around each center such that there are 10,000 data points total including the centers?\n",
     "    This could also be 10000 data points total plus the centers if this is better? Just chance the -k in \n",
     "    the sampData line\"\"\"\n",
@@ -52,10 +52,10 @@
     "    points = np.empty([1,dim])\n",
     "    # generate data around each center\n",
     "    for i in range(k):\n",
-    "        points = np.concatenate((points, np.random.multivariate_normal(centers[i],np.eye(dim),100000)), axis=0)\n",
+    "        points = np.concatenate((points, np.random.multivariate_normal(centers[i],np.eye(dim),npoints)), axis=0)\n",
     "        points = np.delete(points, 0, axis=0)\n",
     "    # sample points from array and combine these with centers\n",
-    "    sampData = np.concatenate((centers, points[np.random.choice(len(points),100000-k)]), axis = 0)\n",
+    "    sampData = np.concatenate((centers, points[np.random.choice(len(points),npoints-k)]), axis = 0)\n",
     "    return(sampData)"
    ]
   },
@@ -138,15 +138,6 @@
    "source": [
     "plt.scatter(dataTest[:,0], dataTest[:,1])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
