--- a/unitTests_revised.ipynb
+++ b/unitTests_revised.ipynb
@@ -194,7 +194,8 @@
     "        k=5\n",
     "        d=15\n",
     "        l=10\n",
-    "        assert_almost_equal(kmeansplusplus(data, k, d).shape[0], k) and assert_almost_equal(kmeansparallel(data, k,l,d).shape[0], k)\n",
+    "        r=1\n",
+    "        assert_almost_equal(kmeansplusplus(data, k, d).shape[0], k) and assert_almost_equal(kmeansparallel(data, k,l,d,r).shape[0], k)\n",
     "\n",
     "        \n",
     "        "
@@ -257,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -281,13 +282,14 @@
     "        k=5\n",
     "        d=15\n",
     "        l=10\n",
-    "        initial=kmeansparallel(data,k,l,d)\n",
+    "        r=1\n",
+    "        initial=kmeansparallel(data,k,l,d,r)\n",
     "        assert len(np.unique(kmeans(data,initial,k,d)[1]))==k\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -329,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -358,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -383,12 +385,12 @@
     "        k=10\n",
     "        d=15\n",
     "        labels=np.random.choice(range(7),1000)\n",
-    "        assert getCentroids(data, labels, k, d).shape[0]==k\n"
+    "        assert getCentroids(data, labels, k, d).shape[0]<=k\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -400,9 +402,8 @@
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
       "platform darwin -- Python 3.5.1, pytest-2.8.1, py-1.4.30, pluggy-0.3.1\n",
       "rootdir: /Users/wsswemily/Desktop/Sta663_Final_Project, inifile: \n",
-      "collected 24 items \n",
+      "collected 23 items / 1 errors \n",
       "\u001b[0m\n",
-      "test_dist_prob_plus.py .\n",
       "test_dist_prob_plus_parallel.py ..\n",
       "test_distance_sq.py .......\n",
       "test_getCentroids.py .\n",
@@ -416,7 +417,12 @@
       "test_shouldStop.py ...\n",
       "test_weights.py .\n",
       "\n",
-      "\u001b[1m\u001b[32m========================== 24 passed in 45.90 seconds ==========================\u001b[0m\n"
+      "==================================== ERRORS ====================================\n",
+      "___________________ ERROR collecting test_dist_prob_plus.py ____________________\n",
+      "test_dist_prob_plus.py:1: in <module>\n",
+      "\u001b[1m    from kmeans_combined import dist_prob_plus, dist_prob_parallel\u001b[0m\n",
+      "\u001b[1m\u001b[31mE   ImportError: No module named 'kmeans_combined'\u001b[0m\n",
+      "\u001b[1m\u001b[31m===================== 23 passed, 1 error in 75.15 seconds ======================\u001b[0m\n"
      ]
     }
    ],
